fixed svg alignment

--- a/stylesheet/premonition.scss
+++ b/stylesheet/premonition.scss
@@ -13,7 +13,7 @@
 
   display: grid;
   grid-template-columns: 43px auto;
-  padding-top: 13px;
+  padding-top: 6px;
   padding-bottom: 6px;
   margin: 30px 0 30px 0;
   background-color: $default-light-color;
@@ -44,7 +44,7 @@
 
   &>svg {
     opacity: .6;
-    margin-top: 2px;
+    margin-top: 0.36rem;
     margin-left: 0.7rem;
   }
 
